--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "chrome-aws-lambda": "^10.1.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "handlebars": "^4.7.8",
-    "puppeteer": "^19.11.1"
+    "puppeteer": "^24.10.1",
+    "puppeteer-core": "^24.10.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
