--- a/package.json
+++ b/package.json
@@ -15,14 +15,24 @@
   "description": "",
   "dependencies": {
     "@faker-js/faker": "^9.8.0",
+    "compression": "^1.8.1",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0",
+    "express": "^4.18.2",
+    "express-rate-limit": "^8.1.0",
+    "express-session": "^1.18.2",
+    "firebase-admin": "^13.5.0",
     "handlebars": "^4.7.8",
+    "helmet": "^8.1.0",
     "mongoose": "^8.16.0",
+    "morgan": "^1.10.1",
     "multer": "^2.0.1",
     "puppeteer": "^24.10.1",
-    "puppeteer-core": "^24.10.1"
+    "puppeteer-core": "^24.10.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
